--- a/OCR/OCR_model.ipynb
+++ b/OCR/OCR_model.ipynb
@@ -6,15 +6,15 @@
    "metadata": {},
    "source": [
     "## Setup\n",
-    "1. Install Tesseract here: https://github.com/UB-Mannheim/tesseract/wiki\n",
+    "1. Install Tesseract (https://github.com/UB-Mannheim/tesseract/wiki)\n",
     "2. Add Tesseract-OCR installation folder to PATH\n",
-    "3. pip install pytesseract\n",
-    "4. Set tesseract path"
+    "3. pip install pytesseract (https://pypi.org/project/pytesseract/)\n",
+    "4. Set tesseract path (See Below Code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x195cc860f10>"
+       "<matplotlib.image.AxesImage at 0x2ae058239a0>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x195cc8c34c0>"
+       "<matplotlib.image.AxesImage at 0x2ae08931570>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x195cc9237f0>"
+       "<matplotlib.image.AxesImage at 0x2ae08995e10>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,16 +273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x195cca67790>"
+       "<matplotlib.image.AxesImage at 0x2ae08a186d0>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
