--- a/OCR/OCR_model.ipynb
+++ b/OCR/OCR_model.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2ae058239a0>"
+       "<matplotlib.image.AxesImage at 0x2c82deb39a0>"
       ]
      },
      "execution_count": 2,
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2ae08931570>"
+       "<matplotlib.image.AxesImage at 0x2c831121540>"
       ]
      },
      "execution_count": 4,
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2ae08995e10>"
+       "<matplotlib.image.AxesImage at 0x2c831181de0>"
       ]
      },
      "execution_count": 6,
@@ -279,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2ae08a186d0>"
+       "<matplotlib.image.AxesImage at 0x2c830fa86d0>"
       ]
      },
      "execution_count": 8,
@@ -342,6 +342,13 @@
     "# Print the text\n",
     "print(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
