--- a/OCR/ID_OCR.ipynb
+++ b/OCR/ID_OCR.ipynb
@@ -9,6 +9,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Install Tesseract (https://github.com/UB-Mannheim/tesseract/wiki)\n",
+    "2. Add Tesseract-OCR installation folder to PATH\n",
+    "3. pip install pytesseract (https://pypi.org/project/pytesseract/)\n",
+    "4. Set tesseract path (See Below Code)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
