--- a/OCR/ID_OCR.ipynb
+++ b/OCR/ID_OCR.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup"
+    "# OCR for ID Card"
    ]
   },
   {
@@ -13,6 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Setup\n",
     "1. Install Tesseract (https://github.com/UB-Mannheim/tesseract/wiki)\n",
     "2. Add Tesseract-OCR installation folder to PATH\n",
     "3. pip install pytesseract (https://pypi.org/project/pytesseract/)\n",
